After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 755981 - dtls: fix printf format on win32
dtls: fix printf format on win32
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Linux
: Normal minor
: 1.6.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-10-02 12:50 UTC by Polochon_street
Modified: 2015-10-02 13:23 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Patched file (874 bytes, patch)
2015-10-02 12:50 UTC, Polochon_street
committed Details | Review

Description Polochon_street 2015-10-02 12:50:28 UTC
Created attachment 312560 [details] [review]
Patched file

Changed a severals non-portable « printf("format: %zd\n"); » by portable G_GSIZE_FORMATs