dtls: fix printf format on win32

https://bugzilla.gnome.org/show_bug.cgi?id=755981